<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:scrollbars="none"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    tools:context=".Nebula_personal_information">
    <!--    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--        xmlns:tools="http://schemas.android.com/tools"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        tools:context=".Nebula_personal_information">-->
    <!--        -->

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">
            <TextView
                android:id="@+id/Tell_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tell_us"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:paddingRight="5dp"
                android:paddingLeft="65dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_yourself"
                android:textSize="24sp"
                android:textColor="#6796FF"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:text="@string/first_name"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/First_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="@drawable/rectangle_1"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textColorHint="@android:color/transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/middle_name"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Middle_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="@drawable/rectangle_1"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/last_name"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Last_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="@drawable/rectangle_1"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Date_of_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/rectangle_1"
                    android:ems="10"
                    android:inputType="date"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/DOB"
                    android:layout_width="63dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/baseline_edit_calendar_24" />
            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/mobile"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Mobile"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="phone"
                android:background="@drawable/rectangle_1"
                android:ems="10"
                android:inputType="phone|number"
                android:padding="5dp"
                android:textColorHint="@android:color/transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/gender"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_1"
                android:entries="@array/gender_options" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textColorHighlight="#C9C9C9"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rectangle_1"
                android:ems="10"
                android:hint="@string/abc_123xyz_dot_domain_net"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColorHint="#877D7D" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/course"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/coursespinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_1"
                android:entries="@array/course_option" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/year_of_study"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/year_of_study"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_1"
                android:entries="@array/year_of_study" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/semester"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/semester_option"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_1"
                android:entries="@array/semester" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/college_id"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/College_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_1"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp"
                android:textColorHint="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/college_name"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/College_Name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rectangle_1"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp"
                android:textColorHint="@color/white" />

            <ImageButton
                android:id="@+id/proceed"
                android:layout_width="282dp"
                android:layout_height="86dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/fui_transparent"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                android:src="@drawable/proceed" />



        </LinearLayout>
    </LinearLayout>


</ScrollView>

